# IPIS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PROJECT_STRUCTURE.md  README.md  probe_femto_eol.py  probe_femto_fpt.py  pyproject.toml  requirements-serving.txt
.github/workflows/: ci.yml  docker-build.yml
configs/: config.yaml
configs/dataset/: debutanizer.yaml  secom.yaml  tep.yaml
configs/deployment/: level1.yaml
configs/model/: hybrid_pathb.yaml  lstm.yaml  pls.yaml  xgboost.yaml
configs/training/: default.yaml
data/: README.md
docker/: Dockerfile.dashboard  Dockerfile.serving  docker-compose.yml  mosquitto.conf
docs/: CITATION_LEDGER.md  HANDOFF.md  IPIS_PROGRAM_CHARTER.md  SUBMISSION_SPEC.md  THESIS_STANDARDS.md
docs/adr/: ADR-007-dynamic-physics-anchored-soft-sensor.md
docs/architecture/: system-overview.md
docs/module1/: lessons-learned.md  results.md  spec.md
docs/module2/: spec.md
docs/module3/: audit-and-source-requests.md  dwsim-walkthrough-3a.md  literature-3b.md  results.md  scoping-3b.md  scoping.md  spec.md  twin-spec-3a.md  twin-validation.md
docs/module4/: formalization-spike.md
docs/module5/: o1-deadtime-timing.md  spec.md
docs/paper/: claims_evidence.md  figure_captions.md  outline.md  references.md  references_verified.md
docs/sources/: source-map.md
models/: soft_sensor_fixture.joblib
models/production/: README.md
notebooks/: README.md
paper/: .gitignore  01_intro.tex  02_related_work.tex  03_framework.tex  04_case_studies.tex  05_results.tex  06_discussion.tex  07_conclusion.tex  abstract.tex  cover_letter.md  cover_letter_JPC.md  highlights.md  main.tex  references.bib
paper2/: .gitignore  01_intro.tex  02_related_work.tex  03_framework.tex  04_case_studies.tex  05_results.tex  06_discussion.tex  07_conclusion.tex  abstract.tex  cover_letter.md  highlights.md  main.tex  references.bib
paper2/tcst/: Busico_TCST_26-0876.docx  main.tex  main_docx.tex
paper3/: README.txt  cover_letter.docx  highlights.docx  scc_paper.tex  scc_refs.bib
paper3/sections/: 01_introduction.tex  02_background.tex  03_method.tex  04_experimental_design.tex  05_results.tex  06_discussion.tex  07_conclusions.tex  08_appendix.tex
paper4/: 01_intro.tex  02_related_work.tex  03_framework.tex  04_case_study.tex  05_results.tex  06_discussion.tex  07_conclusion.tex  Declaration_of_competing_interest.docx  Highlights.docx  abstract.tex  cover_letter.docx  cover_letter.md  main.tex  references.bib  suggested_reviewers.md
paper4/em/: main_EM.tex
paper5/: 01_intro.tex  02_related_work.tex  03_framework.tex  04_case_study.tex  05_results.tex  06_discussion.tex  07_conclusion.tex  08_appendix_o1.tex  Declaration_of_Competing_Interests.docx  abstract.tex  cover_letter.md  highlights.md  main.tex  main_EM.tex  references.bib
scripts/: _fix_z375_13.py  _probe_feed_z.py  _probe_specs.py  _rerun_015.py  _rerun_015b.py  _rerun_015c.py  baseline_pls.py  bench_latency.py  bias_update_eval.py  build_all_femto_trends.py  build_femto_hi_trend.py  compare_physics_pls.py  conformal_eval.py  conformal_synthetic_check.py  convert_canonical_tep.py  cv_select_pls.py  detect_drift.py  diagnose_complexity.py  diagnose_signal.py  diagnose_split_shift.py  download_datasets.py  generate_tep_faults.py  generate_tep_modes.py  infer_label_delay.py  inspect_debutanizer.py  jitl_vs_bias_eval.py  place_dataset.cmd  probe_g1c.py  register_model.py  run_3b1_gpr_check.py  run_3b2_sensor_check.py  run_3b3_regime_map.py  run_ablation_debutanizer.py  run_femto_rul.py  run_g1c.py  run_g2_analysis.py  run_g2_sweep.py  run_horizon_sweeps.py  run_integrated_coverage.py  run_phase_1a.sh  (+13 more)
scripts/paper2_figures/: make_data_figures.py  make_ieee_figures.py  make_schematics.py  make_swept_figures.py
scripts/paper_figures/: __init__.py  fig_ablation.py  fig_architecture.py  fig_bias_trace.py  fig_coverage_tep.py  fig_efficiency.py  fig_secom_cv_path.py  fig_synthetic_stress.py  make_all.py  style.py
src/ipis/: __init__.py
tests/: conftest.py
tests/fixtures/: debutanizer_sample.txt
tests/integration/: test_opcua_mqtt_flow.py
tests/unit/: test_api.py  test_bearing_frequencies.py  test_bias_update.py  test_blocked_cv.py  test_calibrate.py  test_conformal.py  test_coverage.py  test_cwru_loader.py  test_cwru_manifest.py  test_dashboard.py  test_data_router.py  test_degradation.py  test_fug.py  (+34 more)
(+150 files in other folders)
